--- a/etp/angular.json
+++ b/etp/angular.json
@@ -67,8 +67,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "etp:build",
-            "proxyConfig": "src/proxy.conf.json"
+            "browserTarget": "etp:build"
           },
           "configurations": {
             "production": {
