--- a/etp/package.json
+++ b/etp/package.json
@@ -24,8 +24,7 @@
     "@angular/platform-browser-dynamic": "~9.1.3",
     "@angular/router": "~9.1.3",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
-    "chart.js": "^2.9.3",
-    "ng2-charts": "^2.3.2",
+    "@swimlane/ngx-charts": "^14.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -47,7 +46,7 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "~5.4.3",
+    "protractor": "^7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.8.3"
