--- a/etp/package.json
+++ b/etp/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~9.1.3",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "@swimlane/ngx-charts": "^14.0.0",
+    "animate.css": "^4.1.0",
     "apexcharts": "^3.19.2",
     "ng-apexcharts": "^1.2.3",
     "rxjs": "~6.5.4",
