--- a/etp/angular.json
+++ b/etp/angular.json
@@ -32,7 +32,9 @@
               "src/styles.scss",
               "./node_modules/animate.css/animate.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/apexcharts/dist/apexcharts.min.js"
+            ]
           },
           "configurations": {
             "production": {
