--- a/etp/angular.json
+++ b/etp/angular.json
@@ -8,6 +8,12 @@
       "schematics": {
         "@schematics/angular:component": {
           "style": "scss"
+        },
+        "i18n": {
+          "sourceLocale": "en-US",
+          "locales": {
+            "tr": "src/locale/messages.tr.xlf"
+          }
         }
       },
       "root": "",
