--- a/etp/package.json
+++ b/etp/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser": "~9.1.3",
     "@angular/platform-browser-dynamic": "~9.1.3",
     "@angular/router": "~9.1.3",
+    "@auth0/angular-jwt": "^4.2.0",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "@scullyio/init": "0.0.28",
     "@scullyio/ng-lib": "latest",
