--- a/etp/angular.json
+++ b/etp/angular.json
@@ -5,15 +5,15 @@
   "projects": {
     "etp": {
       "projectType": "application",
+      "i18n": {
+        "sourceLocale": "en-US",
+        "locales": {
+          "tr": "src/locale/translated.tr.xlf"
+        }
+      },
       "schematics": {
         "@schematics/angular:component": {
           "style": "scss"
-        },
-        "i18n": {
-          "sourceLocale": "en-US",
-          "locales": {
-            "tr": "src/locale/messages.tr.xlf"
-          }
         }
       },
       "root": "",
@@ -28,6 +28,7 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
+            "localize": true,
             "aot": true,
             "assets": [
               "src/favicon.ico",
@@ -70,6 +71,16 @@
                   "maximumError": "10kb"
                 }
               ]
+            },
+            "tr": {
+              "localize": [
+                "tr"
+              ],
+              "aot": true,
+              "i18nFile": "src/locale/translated.tr.xlf",
+              "i18nFormat": "xlf",
+              "i18nLocale": "tr",
+              "i18nMissingTranslation": "error"
             }
           }
         },
@@ -82,6 +93,9 @@
           "configurations": {
             "production": {
               "browserTarget": "etp:build:production"
+            },
+            "tr": {
+              "browserTarget": "etp:build:tr"
             }
           }
         },
