--- a/etp/package.json
+++ b/etp/package.json
@@ -8,9 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "int:extract": "ng xi18n",
-    "scully": "ng build && scully",
-    "scully:serve": "scully serve"
+    "int:extract": "ng xi18n"
   },
   "private": true,
   "dependencies": {
@@ -27,9 +25,6 @@
     "@angular/router": "~9.1.3",
     "@auth0/angular-jwt": "^4.2.0",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
-    "@scullyio/init": "0.0.28",
-    "@scullyio/ng-lib": "latest",
-    "@scullyio/scully": "latest",
     "@swimlane/ngx-charts": "^14.0.0",
     "animate.css": "^4.1.0",
     "apexcharts": "^3.19.2",
