--- a/etp/package.json
+++ b/etp/package.json
@@ -12,46 +12,46 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.3",
-    "@angular/cdk": "^9.2.1",
-    "@angular/common": "~9.1.3",
-    "@angular/compiler": "~9.1.3",
-    "@angular/core": "~9.1.3",
-    "@angular/forms": "~9.1.3",
-    "@angular/localize": "^9.1.3",
-    "@angular/material": "^9.2.1",
-    "@angular/platform-browser": "~9.1.3",
-    "@angular/platform-browser-dynamic": "~9.1.3",
-    "@angular/router": "~9.1.3",
-    "@auth0/angular-jwt": "^4.2.0",
-    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
+    "@angular/animations": "~10.0.3",
+    "@angular/cdk": "^10.0.1",
+    "@angular/common": "~10.0.3",
+    "@angular/compiler": "~10.0.3",
+    "@angular/core": "~10.0.3",
+    "@angular/forms": "~10.0.3",
+    "@angular/localize": "^10.0.3",
+    "@angular/material": "^10.0.1",
+    "@angular/platform-browser": "~10.0.3",
+    "@angular/platform-browser-dynamic": "~10.0.3",
+    "@angular/platform-server": "~10.0.3",
+    "@angular/router": "~10.0.3",
+    "@auth0/angular-jwt": "^5.0.1",
     "animate.css": "^4.1.0",
     "apexcharts": "^3.19.2",
     "ng-apexcharts": "^1.2.3",
-    "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "~6.6.0",
+    "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.7",
-    "@angular/cli": "~9.1.3",
-    "@angular/compiler-cli": "~9.1.3",
-    "@angular/language-service": "~9.1.3",
+    "@angular-devkit/build-angular": "^0.1000.1",
+    "@angular/cli": "~10.0.1",
+    "@angular/compiler-cli": "~10.0.3",
+    "@angular/language-service": "~10.0.3",
     "@netlify-builder/deploy": "^3.1.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
+    "@types/node": "^14.0.20",
+    "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
+    "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.0",
-    "karma-jasmine": "~3.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "^7.0.0",
-    "ts-node": "~8.3.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~3.3.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "ts-node": "~8.10.2",
     "tslint": "~6.1.0",
-    "typescript": "~3.8.3"
+    "typescript": "~3.9.6"
   }
 }
