--- a/etp/package.json
+++ b/etp/package.json
@@ -12,19 +12,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.3",
-    "@angular/cdk": "^10.0.1",
-    "@angular/common": "~10.0.3",
-    "@angular/compiler": "~10.0.3",
-    "@angular/core": "~10.0.3",
-    "@angular/forms": "~10.0.3",
-    "@angular/localize": "^10.0.3",
-    "@angular/material": "^10.0.1",
-    "@angular/platform-browser": "~10.0.3",
-    "@angular/platform-browser-dynamic": "~10.0.3",
-    "@angular/platform-server": "~10.0.3",
-    "@angular/router": "~10.0.3",
-    "@auth0/angular-jwt": "^5.0.1",
+    "@angular/animations": "~9.1.3",
+    "@angular/cdk": "^9.2.1",
+    "@angular/common": "~9.1.3",
+    "@angular/compiler": "~9.1.3",
+    "@angular/core": "~9.1.3",
+    "@angular/forms": "~9.1.3",
+    "@angular/localize": "^9.1.3",
+    "@angular/material": "^9.2.1",
+    "@angular/platform-browser": "~9.1.3",
+    "@angular/platform-browser-dynamic": "~9.1.3",
+    "@angular/router": "~9.1.3",
+    "@auth0/angular-jwt": "^4.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
+    "@swimlane/ngx-charts": "^14.0.0",
     "animate.css": "^4.1.0",
     "apexcharts": "^3.19.2",
     "ng-apexcharts": "^1.2.3",
