--- a/etp/angular.json
+++ b/etp/angular.json
@@ -6,10 +6,7 @@
     "etp": {
       "projectType": "application",
       "i18n": {
-        "sourceLocale": "en-US",
-        "locales": {
-          "tr": "src/locale/translated.tr.xlf"
-        }
+        "sourceLocale": "en"
       },
       "schematics": {
         "@schematics/angular:component": {
@@ -28,7 +25,6 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
-            "localize": true,
             "aot": true,
             "assets": [
               "src/favicon.ico",
@@ -71,16 +67,6 @@
                   "maximumError": "10kb"
                 }
               ]
-            },
-            "tr": {
-              "localize": [
-                "tr"
-              ],
-              "aot": true,
-              "i18nFile": "src/locale/translated.tr.xlf",
-              "i18nFormat": "xlf",
-              "i18nLocale": "tr",
-              "i18nMissingTranslation": "error"
             }
           }
         },
@@ -93,9 +79,6 @@
           "configurations": {
             "production": {
               "browserTarget": "etp:build:production"
-            },
-            "tr": {
-              "browserTarget": "etp:build:tr"
             }
           }
         },
