overview page updated

--- a/etp/tsconfig.base.json
+++ b/etp/tsconfig.base.json
@@ -35,6 +35,7 @@
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
-    "strictInjectionParameters": true
+    "strictInjectionParameters": true,
+    "enableIvy": false
   }
 }
