--- a/etp/package.json
+++ b/etp/package.json
@@ -28,6 +28,7 @@
     "animate.css": "^4.1.0",
     "apexcharts": "^3.19.2",
     "ng-apexcharts": "^1.2.3",
+    "ngx-countup": "^7.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
