--- a/etp/package.json
+++ b/etp/package.json
@@ -32,15 +32,15 @@
     "@auth0/angular-jwt": "^5.0.1",
     "@nestjs/common": "^6.0.0",
     "@nestjs/core": "^6.0.0",
-    "@nestjs/ng-universal": "^2.0.1",
+    "@nestjs/ng-universal": "^4.0.1",
     "@nestjs/platform-express": "^6.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^8.0.0-beta.1",
     "@nguniversal/express-engine": "^8.0.0",
     "@nguniversal/module-map-ngfactory-loader": "^8.0.0",
+    "aos": "^2.3.4",
     "apexcharts": "^3.19.2",
     "ng-apexcharts": "^1.2.3",
     "reflect-metadata": "^0.1.13",
-    "aos": "^2.3.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -62,7 +62,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.3.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "nodemon": "^1.18.11",
+    "nodemon": "^2.0.4",
     "rimraf": "^2.6.3",
     "ts-loader": "^5.2.0",
     "ts-node": "~8.10.2",
