--- a/etp/package.json
+++ b/etp/package.json
@@ -10,10 +10,14 @@
     "e2e": "ng e2e",
     "int:extract": "ng xi18n",
     "serve": "node serve-script",
-    "compile:server": "webpack --config webpack.server.config.js --progress --colors",
-    "serve:ssr": "node dist/server",
-    "build:ssr": "npm run build:client-and-server-bundles && npm run compile:server",
-    "build:client-and-server-bundles": "ng build --prod --localize && ng run etp:server:production"
+    "compile:server_bak": "webpack --config webpack.server.config.js --progress --colors",
+    "build:ssr_bak": "npm run build:client-and-server-bundles && npm run compile:server",
+    "serve:ssr_bak": "node dist/server",
+    "build:client-and-server-bundles_bak": "ng build --prod --localize && ng run etp:server:production",
+    "dev:ssr": "ng run etp:serve-ssr",
+    "serve:ssr": "node dist/server/main.js",
+    "build:ssr": "ng build --prod && ng run etp:server:production",
+    "prerender": "ng run etp:prerender"
   },
   "private": true,
   "dependencies": {
@@ -30,15 +34,15 @@
     "@angular/platform-server": "~10.0.5",
     "@angular/router": "~10.0.5",
     "@auth0/angular-jwt": "^5.0.1",
-    "@nestjs/common": "^6.0.0",
-    "@nestjs/core": "^6.0.0",
+    "@nestjs/common": "^7.4.2",
+    "@nestjs/core": "^7.4.2",
     "@nestjs/ng-universal": "^4.0.1",
-    "@nestjs/platform-express": "^6.0.0",
+    "@nestjs/platform-express": "^7.4.2",
     "@ng-bootstrap/ng-bootstrap": "^8.0.0-beta.1",
-    "@nguniversal/express-engine": "^8.0.0",
-    "@nguniversal/module-map-ngfactory-loader": "^8.0.0",
+    "@nguniversal/express-engine": "^10.0.2",
     "aos": "^2.3.4",
     "apexcharts": "^3.19.2",
+    "express": "^4.15.2",
     "ng-apexcharts": "^1.2.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.0",
@@ -51,6 +55,8 @@
     "@angular/compiler-cli": "~10.0.5",
     "@angular/language-service": "~10.0.5",
     "@netlify-builder/deploy": "^3.1.0",
+    "@nguniversal/builders": "^10.0.2",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^14.0.26",
@@ -60,15 +66,15 @@
     "karma": "~5.1.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
+    "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.5.0",
     "nodemon": "^2.0.4",
-    "rimraf": "^2.6.3",
-    "ts-loader": "^5.2.0",
+    "rimraf": "^3.0.2",
+    "ts-loader": "^8.0.2",
     "ts-node": "~8.10.2",
     "tslint": "~6.1.0",
     "typescript": "~3.9.7",
-    "wait-on": "^3.2.0",
+    "wait-on": "^5.2.0",
     "webpack-cli": "^3.1.0"
   }
 }
